fixed the layout when stretched

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,8 @@ footer ul {
 /* projects section */
 #projects {
   padding: 4rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #projects h2 {
@@ -235,7 +237,7 @@ footer ul {
   padding: 0;
   margin: 0;
   display: flex;
-  flex-flwo: row wrap;
+  flex-flow: row wrap;
   justify-content: flex-start;
   gap: 1rem;
   font-size: 1rem;
